<resources>
    <string name="app_name">EuMunícipe</string>


    <string name="action_bar_color">#673ab7</string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="title_section_home">EuMunícipe</string>
    <string name="title_section_new_warning">Novo Aviso</string>
    <string name="title_section_history">Histórico</string>
    <string name="title_section_about">Acerca</string>

    <!-- Keep them in order as the titles are in -->
    <drawable name="icon_home">@drawable/ic_home</drawable>
    <drawable name="icon_new_warning">@drawable/ic_call</drawable>
    <drawable name="icon_history">@mipmap/history</drawable>
    <drawable name="icon_about">@drawable/ic_people</drawable>

    <!-- Nav Drawer List Item Icons -->
    <array name="nav_drawer_items">
        <item>EuMunícipe</item>
        <item>Novo Aviso</item>
        <item>Histórico</item>
        <item>Acerca</item>
    </array>

    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@mipmap/ic_new_warning</item>
        <item>@mipmap/history</item>
        <item>@mipmap/ic_about</item>
    </array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="filename">currentPhoto.png</string>

    <string name="email_subject">EuMunícipe - Novo aviso</string>

    <string name="email_header">
        <![CDATA[
            <!DOCTYPE html>
            <html>
            <body>
        ]]>
    </string>

    <string name="email_footer"><![CDATA[</body></html>"]]></string>

    <string name="email_message_greeting"><![CDATA[<p>Bom dia,</p>]]></string>

    <string name="email_message_no_description">
        <![CDATA[<p>De forma a melhorar o vosso município, pretendo
        reportar um problema no vosso município.</p>]]>
    </string>

    <string name="email_message_description">
        <![CDATA[
            <p>De forma a melhorar o vosso município, pretendo reportar o seguinte problema:</p>
            <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>$</b></p>
        ]]>
    </string>

    <string name="email_message_append">
        <![CDATA[<p>Em anexo segue uma foto do problema detectado.<p>]]>
    </string>

    <string name="email_message_coordinates">
        <![CDATA[
            <p>As coordenadas, aproximadas, de GPS do local onde encontrei
            o problema são as seguintes:</p>
            <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>$</b></p>
        ]]>
    </string>

    <string name="email_message_cordinates_googlemaps_link">
        <![CDATA[
            <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href=\"https://www.google.pt/maps/place/$\">Ver no google maps</a></p>
        ]]>
    </string>

    <string name="email_message_sent_from">
        <![CDATA[<br /><br /><h3>Enviado através da aplicação EuMunícipe.</h3>]]>
    </string>


    <string name="step_1_take_photo">1º Passo - Tirar uma foto</string>
    <string name="new_warning_take_photo">Tirar Foto</string>
    <string name="new_warning_take_another_photo">Tirar Outra Foto?</string>
    <string name="new_warning_goto_2_step">2º Passo</string>

    <string name="step_2_capture_location">2º Passo - Capturar a localização</string>
    <string name="new_warning_map_county_name">Município:</string>
    <string name="new_warning_map_county_email">E-mail:</string>
    <string name="new_warning_goto_3_step">3º Passo</string>
    <string name="select_municipality">Seleccione o município</string>
    <string name="search_municipality">Procurar município</string>

    <string name="gps_not_found_title">O GPS não está activado</string>
    <string name="gps_not_found_message">Quer ligá-lo?\nSe não quiser ligá-lo terá de seleccionar o município.</string>


    <string name="step_3_insert_description">3º Passo - Inserir uma descrição\n(opcional)</string>
    <string name="step_3_description_title">Breve descrição do problema.</string>

    <string name="new_warning_goto_4_step">4º Passo</string>
    <string name="step_4_final_check">4º Passo - Finalizar</string>
    <string name="step_4_photo_title">Foto:</string>
    <string name="step_4_map_title">Local:</string>
    <string name="step_4_description_title">Descrição:</string>
    <string name="step_4_email_title">Email do município:</string>
    <string name="step_4_send_button">Enviar</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>



</resources>
