<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step_4_final_check"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_4_photo_title"
        android:id="@+id/textViewPhoto"
        android:layout_gravity="start"
        android:paddingLeft="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_check_photo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_4_map_title"
        android:id="@+id/textViewMap"
        android:layout_gravity="start"
        android:paddingLeft="10dp"/>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/new_warning_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_4_email_title"
        android:id="@+id/textViewEmail"
        android:layout_gravity="start"
        android:paddingLeft="10dp"/>

    <EditText android:id="@+id/new_warning_final_check_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_4_description_title"
        android:id="@+id/textViewDescription"
        android:layout_gravity="start"
        android:paddingLeft="10dp"/>

    <EditText android:id="@+id/new_warning_final_check_edit_description"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_4_send_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />


</LinearLayout>