<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step_1_take_photo"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/new_warning_photo"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"/>



    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/new_warning_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_warning_take_photo"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:id="@+id/new_warning_layout_2_step"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/new_warning_goto_2_step_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/new_warning_goto_2_step"
            />


            <ImageButton
                android:id="@+id/new_warning_goto_2_step_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:clickable="true"
                android:layout_below="@+id/new_warning_goto_2_step_text_view"
                android:layout_centerHorizontal="true"
             />

        </RelativeLayout>
    </RelativeLayout>




</LinearLayout>