<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step_2_capture_location"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/new_warning_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/new_warning_layout_3_step"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/new_warning_goto_3_step_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_warning_goto_3_step"
            />


        <ImageButton
            android:id="@+id/new_warning_goto_3_step_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:clickable="true"
            android:layout_below="@+id/new_warning_goto_3_step_text_view"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_warning_map_county_name"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/new_warning_map_edit_municipality"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="Seleccionar município"
            android:gravity="center"

        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_warning_map_county_email"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/new_warning_map_edit_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>