<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/step_3_insert_description"
            android:id="@+id/textView"
            android:layout_gravity="clip_horizontal"
            android:gravity="center_horizontal"

        />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
        >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/new_warning_description_edit"
                android:hint="@string/step_3_description_title"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_design"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:padding="10dp"
            />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/new_warning_layout_3_step"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <TextView
            android:id="@+id/new_warning_goto_4_step_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_warning_goto_4_step"
            />


        <ImageButton
            android:id="@+id/new_warning_goto_4_step_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:clickable="true"
            android:layout_below="@+id/new_warning_goto_4_step_text_view"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</RelativeLayout>